<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="@drawable/edittext_background"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_logo_biru"
        android:contentDescription="@string/logo"
        android:layout_marginBottom="24dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="#009688"
        android:textSize="28sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:hint="@string/username"
        android:padding="14dp"
        android:textAlignment="center"
        android:textColor="#6bfff7"
        android:textColorHint="#00838F"
        tools:ignore="TextFields,VisualLintTextFieldSize,TextContrastCheck" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textAlignment="center"
        android:textColor="#6bfff7"
        android:textColorHint="#00838F"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">


        <Button
            android:id="@+id/btn_reset"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#f44336"
            android:padding="12dp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="#000000" />


        <Button
            android:id="@+id/btn_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:padding="12dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#263238" />

    </LinearLayout>

</LinearLayout>
